create summary file

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
     --color-web: #4d5ae5;
     --color-nav: #404bbf;
     --color-ger:#31d0aa;
+    --color-dairy:#FCFCFC;
+    --color-light-slate:#8e8f99;
   }
   
 *,
@@ -552,4 +554,262 @@ gap: 40px;
 
   .icons-foter {
     fill: var(--color-secondary);
+  }
+
+  .info-form {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-non);
+
+    }
+
+  .modal-form {
+    display: flex;
+    gap:24px;
+  }
+  
+   .foter-modal {
+  margin: 0 auto;
+ }
+
+  .input-modal-foter {
+    color: var(--color-non);
+    width: 264px;
+    height: 40px;
+    border: 1px solid var(--color-non);
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+  }
+
+
+  .click-modal-form {
+    font-family: "Roboto", sans-serif;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--color-non);
+    cursor: pointer;
+    background-color: var(--color-von);
+    border: none;
+    border-radius: 4px;
+  }
+
+  .svg-modal-foter {
+    fill: var(--color-non);
+    margin-left: 16px;
+  }
+  /* modal */ 
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0; 
+    padding: 80px 516px 12px;
+    overflow-y: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .is-hiden {
+    display: none;
+  }
+
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background: var(--color-dairy);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+  }
+
+  .madal-click {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--color-imag);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  }
+
+  .madal-click:hover {
+    background-color: var(--color-stile);
+    border: none;
+  }
+
+  .madal-click:focus {
+    border: none;
+  }
+
+  .button-icon-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .button-icon-svg:hover,
+  .button-icon-svg:focus {
+    fill: var(--color-non)
+  }
+
+  .tabl-modal {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--color-prymary);
+    margin-bottom: 16px;
+  }
+
+  .div-modal-form {
+    margin-bottom: 8px;
+    border-color:var(--color-von);
+  }
+
+  .label-modal {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-light-slate);
+    margin-bottom: 4px;
+  }
+
+  .text-modal {
+    position: relative;
+  }
+
+  .tabl-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
+  .tabl-input:focus {
+    border-color: var(--color-von);
+    outline: none;
+  }
+
+  .phone-svg {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  }
+
+  .phone-svg:focus ,
+  .text-modal:focus {
+    fill: #4D5AE5;
+  }
+
+  .div-coment {
+    margin-bottom: 16px
+  }
+
+  .coment-user {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .coment-user:focus {
+    border-color: var(--color-von);
+    outline:none;
+  }
+
+  .div-box {
+    margin-bottom: 24px;
+  }
+
+  .visually-hidden {
+    display: none;
+  }
+
+  .label-box {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-light-slate);
+  }
+
+  .span-modal-box {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+
+  }
+
+  .link-modal {
+    color: var(--color-von)
+  }
+
+  .button-modal {
+    margin: 0 auto;
+    display: block;
+    font-family: "Roboto", sans-serif;
+    min-width: 169px;
+    height: 56px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--color-non);
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
