--- a/css/style.css
+++ b/css/style.css
@@ -664,21 +664,20 @@ gap: 40px;
   }
 
   .madal-click:hover {
+
     background-color: var(--color-stile);
     border: none;
+    fill: var(--color-non);
   }
 
   .madal-click:focus {
+    color: var(--color-stile);
     border: none;
+    fill: var(--color-non);
   }
 
   .button-icon-svg {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .button-icon-svg:hover,
-  .button-icon-svg:focus {
-    fill: var(--color-non)
   }
 
   .tabl-modal {
@@ -709,6 +708,7 @@ gap: 40px;
     position: relative;
   }
 
+
   .tabl-input {
     width: 100%;
     height: 40px;
@@ -725,6 +725,10 @@ gap: 40px;
     outline: none;
   }
 
+  .tabl-input:focus + .phone-svg {
+    fill: var(--color-von);
+  }
+
   .phone-svg {
     position: absolute;
     left: 16px;
@@ -732,11 +736,6 @@ gap: 40px;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  }
-
-  .phone-svg:focus ,
-  .text-modal:focus {
-    fill: #4D5AE5;
   }
 
   .div-coment {
@@ -777,6 +776,12 @@ gap: 40px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--color-light-slate);
+  }
+
+  .input-box:checked + .span-modal-box{
+    background-color: var(--color-stile);
+    border: none;
+    fill: var(--color-secondary);
   }
 
   .span-modal-box {
