--- a/css/style.css
+++ b/css/style.css
@@ -763,28 +763,44 @@ gap: 40px;
     outline:none;
   }
 
+  .coment-user::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+  }
+
   .div-box {
     margin-bottom: 24px;
+
   }
 
   .visually-hidden {
-    display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0 );
+  overflow: hidden;
   }
 
   .label-box {
+    font-family: Roboto;
+    color: #8E8F99;
+    height: 16px;
     font-size: 12px;
+    font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--color-light-slate);
+    position: relative;
+    align-self: center;
+    cursor: pointer;
   }
 
-  .input-box:checked + .label-box{
-    background-color: var(--color-stile);
-    border: none;
-    fill: var(--color-secondary);
-  }
-
-  .span-modal-box {
+  .info-privacy{
+    display: inline-flex;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4); 
@@ -794,7 +810,28 @@ gap: 40px;
     align-items: center;
     justify-content: center;
     fill: transparent;
+    margin-right: 8px;
+    
+  }
 
+  .input-box:checked + .label-box > .info-privacy {
+    background-color: var(--color-stile);
+    border: none;
+    fill: var(--color-secondary);
+    border-color: #4D5AE5;
+  }
+  
+  .svg-span-box {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .svg-span-box:hover,
+  .svg-span-box:focus {
+    fill: var(--color-stile);
+    stroke-width: 1px;
+    stroke: var(--color-stile);
   }
 
   .link-modal {
